# corsocpp_pap_2025

./: CMakeLists.txt
Memory/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  risorse.qrc
S0/: CMakeLists.txt
S1/: CMakeLists.txt  libreria.cpp  libreria.h  main.cpp
S10/: CMakeLists.txt  final.cpp  hiding.cpp  overloading.cpp  overriding.cpp  virtualdestructor.cpp
S10/java/: Example.java
S11/: CMakeLists.txt  employee.h  lecturer.h  lecturerresearcher.cpp  lecturerresearcher.h  main.cpp
S12/: CMakeLists.txt  constcast.cpp  dynamiccast.cpp  staticcast.cpp
S2/: CMakeLists.txt  main.cpp
S3/: CMakeLists.txt  grades.cpp  main.cpp
S4/: CMakeLists.txt  cfraction.h  cfraction_main.cpp  fraction.cpp  fraction.h  fraction_main.cpp
S5/: CMakeLists.txt  fraction.cpp  fraction.h  fraction_main.cpp
S6/: CMakeLists.txt  functor.cpp  lambda.cpp  lambda2.cpp
S7/: CMakeLists.txt  main.cpp
S8/: CMakeLists.txt  main.cpp
S9/: CMakeLists.txt  derivationtypes.cpp  employee.cpp  lecturer.cpp  lecturer.h  main.cpp  researcher.cpp  researcher.h
farkle/Farkle/: CMakeLists.txt  main.cpp
